ecr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cipapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cipapp
  template:
    metadata:
      labels:
        app: cipapp
    spec:
      containers:
      - name: myapp-cont
        image: 630932753780.dkr.ecr.ap-south-1.amazonaws.com/ekstest:v2
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: cipapp
spec:
  type: ClusterIP  ## this is default if we do not type in service definition
  selector:
    app: cipapp
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
