newDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeserve
  labels:
    app: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test 
    spec:
      containers:
      - name: kubeserve
        image: ghcr.io/prajwal14/test-action:placeholder
        ports:
        - containerPort: 8082
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: kubeserve
spec:
  type: LoadBalancer
  selector:
    app: test
  ports:
   - protocol: TCP
     port: 80
     targetPort: 8082
