test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeserve
  labels:
    app: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test 
    spec:
      containers:
      - name: kubeserve
        image: leaddevops/kubeserve:v1
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: kubeserve
  annotations:
    "service.beta.kubernetes.io/aws-load-balancer-internal": "true"
spec:
  type: LoadBalancer
  selector:
    app: test
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
